добавил базовую документацию для /auth
