# app/Http/Controllers/AuthController.php
@@ -18,6 +18,22 @@ class AuthController extends Controller implements IAuthController
         private readonly IAuthService $authService
     ) {}
 
+    /**
+     * @OA\Post(path="/auth/register",
+     *      tags={"Auth"},
+     *      summary="Регистрация",
+     *      @OA\RequestBody(description="Запрос",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      ),
+     *      @OA\Response(response=200, description="Ответ",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      )
+     * )
+     */
     public function register(RegisterUserRequest $request): array
     {
         $dto = new RegisterUserDto(
@@ -29,6 +45,22 @@ class AuthController extends Controller implements IAuthController
         return $this->authService->registerUser($dto);
     }
 
+    /**
+     * @OA\Post(path="/auth/login",
+     *      tags={"Auth"},
+     *      summary="Вход",
+     *      @OA\RequestBody(description="Запрос",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      ),
+     *      @OA\Response(response=200, description="Ответ",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      )
+     * )
+     */
     public function login(LoginUserRequest $request): array
     {
         $dto = new LoginUserDto(
@@ -40,21 +72,85 @@ class AuthController extends Controller implements IAuthController
         return $this->authService->loginUser($dto);
     }
 
+    /**
+     * @OA\Post(path="/auth/logout",
+     *      tags={"Auth"},
+     *      summary="Выход",
+     *      @OA\RequestBody(description="Запрос",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      ),
+     *      @OA\Response(response=200, description="Ответ",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      )
+     * )
+     */
     public function logout(Request $request): void
     {
         $this->authService->logoutUser($request);
     }
 
-    public function resetPassword(ResetPasswordRequest $request): array
-    {
-        return $this->authService->resetUserPassword($request);
-    }
-
+    /**
+     * @OA\Post(path="/auth/forgot-password",
+     *      tags={"Auth"},
+     *      summary="Запрос на сброс пароля",
+     *      @OA\RequestBody(description="Запрос",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      ),
+     *      @OA\Response(response=200, description="Ответ",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      )
+     * )
+     */
     public function forgotPassword(ForgotPasswordRequest $request): array
     {
         return $this->authService->forgotPassword($request->input('email'));
     }
 
+    /**
+     * @OA\Post(path="/auth/reset-password",
+     *      tags={"Auth"},
+     *      summary="Обновление пароля после сброса",
+     *      @OA\RequestBody(description="Запрос",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      ),
+     *      @OA\Response(response=200, description="Ответ",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      )
+     * )
+     */
+    public function resetPassword(ResetPasswordRequest $request): array
+    {
+        return $this->authService->resetUserPassword($request);
+    }
+
+    /**
+     * @OA\Post(path="/auth/refresh",
+     *      tags={"Auth"},
+     *      summary="Обновление access токена",
+     *      @OA\RequestBody(description="Запрос",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      ),
+     *      @OA\Response(response=200, description="Ответ",
+     *          @OA\MediaType(mediaType="application/json",
+     *              @OA\Schema(),
+     *          )
+     *      )
+     * )
+     */
     public function refresh(Request $request): array
     {
         return $this->authService->refreshAccessToken($request);
